tests/spec/compile-pass/027_shared_mutex_send_sync.zn
// category: compile-pass
// profile: hosted
// purpose: Shared<Mutex<T>> can cross threads when T is Send

module tests.pass.sharedMutexSendSync;

import core.alloc.{AllocError, GlobalAllocator};
import core.result.{Result, Ok};
import std.sync.Mutex;
import std.thread.Thread;

struct Counter {
    value: U64,
}

fn main(mut allocator: GlobalAllocator) -> Result<Unit, AllocError> {
    val mutex = Mutex.new(Counter { value: 0 });
    val shared = Shared.newIn(mutex, mut allocator);
    val forThread = shared.clone();
    val handle = try Thread.spawn(move () -> USize {
        return forThread.strongCount();
    });
    val ignored = try move handle.join();
    return Ok(());
}
