tests/spec/compile-fail/017_thread_array_slice_escape.zn
// category: compile-fail
// profile: hosted
// purpose: ArraySlice cannot be captured by spawned threads

module tests.fail.threadArraySliceEscape;

import core.alloc.{AllocError, GlobalAllocator};
import core.result.{Result, Ok};
import std.thread.Thread;

fn consume(bytes: ArraySlice<U8>) -> USize {
    return bytes.len;
}

fn bad(mut allocator: GlobalAllocator) -> Result<Unit, AllocError> {
    var bytes = Array<U8>.filledIn(4, 0, mut allocator);
    let slice = bytes.asSlice();
    let handle = try Thread.spawn(move () -> USize {
        return consume(slice); // expected-error: ArraySlice cannot escape to a thread
    });
    let ignoredHandle = handle;
    return Ok(());
}
